# AniLog

./: .gitignore  AIUnderstanding.md  DEEP_RESEARCH.md  Notes.md  README.md  components.json  eslint.config.js  flake.nix  index.html  oauth-redirect.html  package.json  vite.config.ts
.agents/skills/myanimelist/: SKILL.md
.github/workflows/: deploy-oauth-redirect.yml
plans/architecture/: list-architecture-spec.md
plans/design/: Design Requirements.md  DesignRequirementV1.md  DesignRequirementV2.md  DesignRequirementV3.md
plans/markdown-driven-beginner/: PLAN.md
plans/oauth/: PLAN.md
plans/onboarding-animated-icons/: PLAN.md
plans/schema/: myanimelist_reasoning.md
plans/secure-store/: PLAN.md
src/: index.css  main.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  secure_store.rs
src-tauri/src/oauth/: flow.rs  mod.rs  providers.rs  state.rs  store.rs  tokens.rs  types.rs
src-tauri/src/storage/: mod.rs  secure_store.rs
src/components/: copy-field.tsx  secret-input.tsx  setup-layout.tsx
src/components/animated-icons/: clipboard.tsx  compass.tsx  copy.tsx  cyber-key.tsx  data-pipeline.tsx  gear.tsx  guided-constellation.tsx  index.tsx  reveal.tsx
src/components/onboarding/: beginner-md.tsx  path-card.tsx
src/components/ui/: alert-dialog.tsx  alert.tsx  badge.tsx  button.tsx  card.tsx  combobox.tsx  dropdown-menu.tsx  field.tsx  input-group.tsx  input.tsx  label.tsx  select.tsx  (+1 more)
src/lib/: auth.ts  keyboard-scroll.ts  secure-store.ts
src/routes/: __root.tsx
(+62 files in other folders)
