[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.88.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
keyring = "4.0.0-rc.3"
keyring-core = "0.7.2"
oauth2 = { version = "4", features = ["reqwest", "pkce-plain"] }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
] }
url = "2"
thiserror = "2"
tauri-plugin-oauth = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-opener = "2"
